--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>UpClient</title>
     <style>
     </style>
     <link rel="stylesheet" href="styles.css" type="text/css">
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="slick/slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="slick/slick/slick-theme.css"/>
     <link rel="stylesheet" id="theme" href="select/public/selectric.css">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 </head>
 <body>
 <div class="welcome-image">
@@ -455,7 +456,7 @@
         <div class="flex-block-row">
             <div class="keyses-images">
                 <img style="height: 70px" src="assets/logos/logo2-monitor.png">
-                <img class="monitor" src="assets/monitors/11.png">
+                <img class="monitor" src="assets/monitors/22.png">
             </div>
             <div class="keyses-description">
 
@@ -483,7 +484,7 @@
         <div class="flex-block-row">
             <div class="keyses-images">
                 <img style="height: 70px" src="assets/logos/logo3-monitor.png">
-                <img class="monitor" src="assets/monitors/11.png">
+                <img class="monitor" src="assets/monitors/33.png">
             </div>
             <div class="keyses-description">
                 Кольцевой формат рекламы - NEW!<br><br>
