--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 </head>
 <body>
 <div class="welcome-image">
+    <div class="mobile-logo">
+        <img src="assets/logos/youtube.png">
+    </div>
     <div class="welcome-header">
         Видеореклама <br>на youtube
     </div>
@@ -98,76 +101,76 @@
 </div>
 <form action="https://formspree.io/zima04zima@gmail.com" method="POST" class="form">
     <!--    <div class="form-container slider slide-form-0">-->
-        <div class="calc-form">
-            <div class="calc-header">
-                Заполните форму и узнайте цену :
+    <div class="calc-form">
+        <div class="calc-header">
+            Заполните форму и узнайте цену :
+        </div>
+        <div class="calc-body">
+            <div class="row-calc">
+                <label>
+                    Расположение
+                </label>
+                <div class="input-calc-block space-row">
+                    <div class="item">
+                        <select id="basic">
+                            <option selected value="peaches">Страна</option>
+                            <option value="cherries">Беларусь</option>
+                            <option value="cherries">Россия</option>
+                        </select>
+                    </div>
+                    <div class="item">
+                        <select id="basic">
+                            <option selected value="peaches">Регион</option>
+                            <option value="cherries">Витебская</option>
+                            <option value="cherries">Московская</option>
+                        </select>
+                    </div>
+                    <div class="item">
+                        <select id="basic">
+                            <option selected value="peaches">Город</option>
+                            <option value="cherries">Минск</option>
+                            <option value="cherries">Москва</option>
+                        </select>
+                    </div>
+                </div>
             </div>
-            <div class="calc-body">
-                <div class="row-calc">
-                    <label>
-                        Расположение
-                    </label>
-                    <div class="input-calc-block space-row">
-                        <div class="item">
-                            <select id="basic">
-                                <option selected value="peaches">Страна</option>
-                                <option value="cherries">Беларусь</option>
-                                <option value="cherries">Россия</option>
-                            </select>
-                        </div>
-                        <div class="item">
-                            <select id="basic">
-                                <option selected value="peaches">Регион</option>
-                                <option value="cherries">Витебская</option>
-                                <option value="cherries">Московская</option>
-                            </select>
-                        </div>
-                        <div class="item">
-                            <select id="basic">
-                                <option selected value="peaches">Город</option>
-                                <option value="cherries">Минск</option>
-                                <option value="cherries">Москва</option>
-                            </select>
-                        </div>
+            <div class="row-calc">
+                <label>
+                    Ваше ФИО
+                </label>
+                <div class="input-calc-block">
+                    <div class="item">
+                        <input class="large-length-input" type="text" name="FIO"
+                               placeholder="Иванов Иван Иванович">
                     </div>
                 </div>
-                <div class="row-calc">
-                    <label>
-                        Ваше ФИО
-                    </label>
-                    <div class="input-calc-block">
-                        <div class="item">
-                            <input class="large-length-input" type="text" name="FIO"
-                                   placeholder="Иванов Иван Иванович">
-                        </div>
+            </div>
+            <div class="row-calc">
+                <label>
+                    Ваш E-mail
+                </label>
+                <div class="input-calc-block">
+                    <div class="item">
+                        <input class="large-length-input" type="text" name="email" placeholder="ivan@mail.com">
                     </div>
                 </div>
-                <div class="row-calc">
-                    <label>
-                        Ваш E-mail
-                    </label>
-                    <div class="input-calc-block">
-                        <div class="item">
-                            <input class="large-length-input" type="text" name="email" placeholder="ivan@mail.com">
-                        </div>
+            </div>
+            <div class="row-calc">
+                <label>
+                    Телефон
+                </label>
+                <div class="input-calc-block">
+                    <div class="item">
+                        <input class="large-length-input" type="text" name="comment"
+                               placeholder="+375 00 000 00 00">
                     </div>
                 </div>
-                <div class="row-calc">
-                    <label>
-                        Телефон
-                    </label>
-                    <div class="input-calc-block">
-                        <div class="item">
-                            <input class="large-length-input" type="text" name="comment"
-                                   placeholder="+375 00 000 00 00">
-                        </div>
-                    </div>
-                </div>
-                <div class="send-button-container">
-                    <input class="send-button" type="submit" value="Отправить">
-                </div>
+            </div>
+            <div class="send-button-container">
+                <input class="send-button" type="submit" value="Отправить">
             </div>
         </div>
+    </div>
     <!--        <div style="display: flex">-->
     <!--            <div class="calc-form">-->
     <!--                <div class="calc-header">-->
@@ -405,11 +408,11 @@
 
                 <div><span>Достигнутые показатели:</span><br><br>
 
-                    - Итоговое количество просмотров видео на YouTube — более 60 000 просмотров.<br><br>
+                    Итоговое количество просмотров видео на YouTube — более 60 000 просмотров.<br><br>
 
-                    - Процент удержания аудитории — более 70%.<br><br>
+                    Процент удержания аудитории — более 70%.<br><br>
 
-                    - Коэффициент просмотров — более 75%
+                    Коэффициент просмотров — более 75%
                 </div>
             </div>
         </div>
@@ -433,11 +436,11 @@
 
                 <div><span>Достигнутые показатели:</span><br><br>
 
-                    - Итоговое количество просмотров видео на YouTube — более 200 000 просмотров.<br><br>
+                    Итоговое количество просмотров видео на YouTube — более 200 000 просмотров.<br><br>
 
-                    - Процент удержания аудитории — более 60%.<br><br>
+                    Процент удержания аудитории — более 60%.<br><br>
 
-                    - Коэффициент просмотров — более 80%
+                    Коэффициент просмотров — более 80%
                 </div>
             </div>
         </div>
@@ -469,11 +472,11 @@
 
                 <div><span>Достигнутые показатели:</span><br><br>
 
-                    - Итоговое количество просмотров видео на YouTube — более 130 000 просмотров.<br><br>
+                    Итоговое количество просмотров видео на YouTube — более 130 000 просмотров.<br><br>
 
-                    - Процент удержания аудитории — более 65%.<br><br>
+                    Процент удержания аудитории — более 65%.<br><br>
 
-                    - Коэффициент просмотров — более 70%
+                    Коэффициент просмотров — более 70%
                 </div>
             </div>
         </div>
@@ -514,7 +517,7 @@
             <h3 class="footer-header">
                 Заполните форму и мы с вами свяжемся
             </h3>
-            <img src="assets/footer-logo.png" style="padding: 25px 0; height: 200px">
+            <img src="assets/footer-logo.png" style="padding: 25px 0; width: 90%">
             <div id="floatContainer" class="float-container">
                 <label class="send-label" for="floatField">отправить</label>
                 <input id="floatField" type="text" class="footer-input" placeholder="Введите свой e-mail адрес">
@@ -579,7 +582,8 @@
 
                 breakpoint: 700,
                 settings: {
-                    slidesToShow: 3,
+                    slidesToShow: 1,
+                    slidesToScroll: 1,
                     infinite: true
                 }
             }]
@@ -593,11 +597,15 @@
             swipe: false
         });
         $('.keyses-class').slick({
-            adaptiveHeight: false,
+            adaptiveHeight: true,
             dots: true,
             infinite: false,
             slidesToShow: 1,
             slidesToScroll: 1,
+            responsive: [{
+                breakpoint: 1000,
+                adaptiveHeight: true
+            }]
         });
         $('.advertising-format-class').slick({
             dots: true,
