--- a/index.html
+++ b/index.html
@@ -11,6 +11,34 @@
     <link rel="stylesheet" type="text/css" href="slick/slick/slick-theme.css"/>
     <link rel="stylesheet" id="theme" href="select/public/selectric.css">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <!-- Facebook Pixel Code -->
+    <script>
+        !function(f,b,e,v,n,t,s)
+        {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+            n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+            if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+            n.queue=[];t=b.createElement(e);t.async=!0;
+            t.src=v;s=b.getElementsByTagName(e)[0];
+            s.parentNode.insertBefore(t,s)}(window, document,'script',
+            'https://connect.facebook.net/en_US/fbevents.js');
+        fbq('init', '361214764822231');
+        fbq('track', 'PageView');
+        // fbq('track', 'Lead');
+        // fbq('track', 'send_form1');
+        // fbq('track', 'send_form2');
+        // fbq('track', 'email');
+    </script>
+    <noscript><img height="1" width="1" style="display:none"
+                   src="https://www.facebook.com/tr?id=361214764822231&ev=PageView&noscript=1"
+    /></noscript>
+    <!-- End Facebook Pixel Code -->
+    <script>
+        function pixelTrigger(goal) {
+            fbq('track', 'Lead');
+            fbq('track', goal);
+            debugger;
+        }
+    </script>
 </head>
 <body>
 <div class="welcome-image">
@@ -79,7 +107,7 @@
                 <div style="font-size: 30px;padding-bottom: 15px;">или</div>
                 <div class="price-description-container">
                     <img src="assets/logos/circle-icon-1.svg">
-                    <div class="price-description text">29 000 показов</div>
+                    <div class="price-description text">110 000 просмотров</div>
                 </div>
                 <div class="price-description-container">
                     <img src="assets/logos/circle-icon-2.svg">
@@ -93,7 +121,10 @@
         </div>
     </div>
 </div>
-<form action="https://formspree.io/inf0@upclient.by" method="POST" class="form">
+<form action="https://formspree.io/inf0@upclient.by"
+      method="POST"
+      onsubmit="gtag('event', 'form_main', { 'event_category': 'main', 'event_action': 'send', });return true;"
+      class="form">
     <div class="calc-form">
         <div class="calc-header">
             Заполните форму и узнайте цену :
@@ -160,7 +191,11 @@
                 </div>
             </div>
             <div class="send-button-container">
-                <input class="send-button" type="submit" value="Отправить">
+                <input class="send-button"
+                       id="send_form1"
+                       type="submit"
+                       value="Отправить"
+                       onclick="pixelTrigger('send_form1')">
             </div>
         </div>
     </div>
@@ -444,7 +479,10 @@
         <div class="advertising-button">
             заказать
         </div>
-        <form action="https://formspree.io/inf0@upclient.by" method="POST" class="form-2">
+        <form action="https://formspree.io/inf0@upclient.by"
+              method="POST"
+              onsubmit="gtag('event', 'form_2', { 'event_category': 'form_2', 'event_action': 'send', });return true;"
+              class="form-2">
             <div class="calc-form">
                 <div class="calc-body" style="padding-top: 40px">
                     <div class="row-calc">
@@ -480,8 +518,10 @@
                         </div>
                     </div>
                     <div class="send-button-container">
-                        <input style="background-color: #af0808" class="send-button" type="submit"
-                               value="Отправить">
+                        <input style="background-color: #af0808"
+                               class="send-button"
+                               type="submit"
+                               value="Отправить" onclick="pixelTrigger('send_form2')">
                     </div>
                 </div>
             </div>
@@ -490,17 +530,19 @@
 </div>
 <h1>Наши клиенты</h1>
 <div class="your-class slider content-container">
-    <div class="slide"><img class="slide-logo" src="assets/logos/logo1.png"></div>
-    <div class="slide"><img class="slide-logo" src="assets/logos/logo2.png"></div>
-    <div class="slide"><img class="slide-logo" src="assets/logos/logo3.png"></div>
-    <div class="slide"><img class="slide-logo" src="assets/logos/logo4.png"></div>
-    <div class="slide"><img class="slide-logo" src="assets/logos/logo5.png"></div>
-    <div class="slide"><img class="slide-logo" src="assets/logos/logo6.png"></div>
-    <div class="slide"><img class="slide-logo" src="assets/logos/logo7.png"></div>
-    <div class="slide"><img class="slide-logo" src="assets/logos/logo8.jpg"></div>
-    <div class="slide"><img class="slide-logo" src="assets/logos/logo9.jpg"></div>
-    <div class="slide"><img class="slide-logo" src="assets/logos/logo10.png"></div>
+<!--    <div class="slide"><img src="assets/team.jpg"></div>-->
+<!--    <div class="slide"><img src="assets/team.jpg"></div>-->
+<!--    <div class="slide"><img class="slide-logo" src="assets/logos/logo2.png"></div>-->
+<!--    <div class="slide"><img class="slide-logo" src="assets/logos/logo3.png"></div>-->
+<!--    <div class="slide"><img class="slide-logo" src="assets/logos/logo4.png"></div>-->
+<!--    <div class="slide"><img class="slide-logo" src="assets/logos/logo5.png"></div>-->
+<!--    <div class="slide"><img class="slide-logo" src="assets/logos/logo6.png"></div>-->
+<!--    <div class="slide"><img class="slide-logo" src="assets/logos/logo7.png"></div>-->
+<!--    <div class="slide"><img class="slide-logo" src="assets/logos/logo8.jpg"></div>-->
+<!--    <div class="slide"><img class="slide-logo" src="assets/logos/logo9.jpg"></div>-->
+<!--    <div class="slide"><img class="slide-logo" src="assets/logos/logo10.png"></div>-->
 </div>
+<div class="cycle"> </div>
 <div class="footer">
     <div class="row">
         <div class="left-part-footer">
@@ -509,31 +551,38 @@
             </h3>
             <img src="assets/footer-logo.png" style="padding: 25px 0; width: 90%">
             <div id="floatContainer" class="float-container">
-                <label class="send-label" for="floatField">отправить</label>
-                <form action="https://formspree.io/inf0@upclient.by" method="POST">
+                <form action="https://formspree.io/inf0@upclient.by"
+                      method="POST"
+                      onsubmit="gtag('event', 'form_3', { 'event_category': 'form_3', 'event_action': 'send', });return true;"
+                      style="width: inherit">
                     <input id="floatField"
                            name="email"
                            type="text"
                            class="footer-input"
                            placeholder="Введите свой e-mail адрес">
+                    <div class="send-button-container-footer">
+                        <input class="send-button-footer"
+                               type="submit"
+                               value="Отправить" onclick="pixelTrigger('email')">
+                    </div>
                 </form>
             </div>
         </div>
+        <div class="right-part-footer">
+            <h3 class="footer-header">
+                наше местоположение
+            </h3>
+            <div style="overflow:hidden;width: 500px;position: relative;">
+                <iframe width="500" height="350"
+                        src="https://maps.google.com/maps?width=500&amp;height=350&amp;hl=en&amp;q=%D0%BC%D0%B8%D0%BD%D1%81%D0%BA%20%D1%84%D0%B0%D0%B1%D1%80%D0%B8%D1%86%D0%B8%D1%83%D1%81%D0%B0%209%D0%B0+(%D0%9E%D0%9E%D0%9E%20%22%D0%90%D0%BF%D0%9A%D0%BB%D0%B8%D0%B5%D0%BD%D1%82)&amp;ie=UTF8&amp;t=&amp;z=16&amp;iwloc=B&amp;output=embed"
+                        frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+                <style>#gmap_canvas img {
+                    max-width: none !important;
+                    background: none !important
+                }</style>
+            </div>
+            <br/></div>
     </div>
-    <div class="right-part-footer">
-        <h3 class="footer-header">
-            наше местоположение
-        </h3>
-        <div style="overflow:hidden;width: 500px;position: relative;">
-            <iframe width="500" height="350"
-                    src="https://maps.google.com/maps?width=500&amp;height=350&amp;hl=en&amp;q=%D0%BC%D0%B8%D0%BD%D1%81%D0%BA%20%D1%84%D0%B0%D0%B1%D1%80%D0%B8%D1%86%D0%B8%D1%83%D1%81%D0%B0%209%D0%B0+(%D0%9E%D0%9E%D0%9E%20%22%D0%90%D0%BF%D0%9A%D0%BB%D0%B8%D0%B5%D0%BD%D1%82)&amp;ie=UTF8&amp;t=&amp;z=16&amp;iwloc=B&amp;output=embed"
-                    frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
-            <style>#gmap_canvas img {
-                max-width: none !important;
-                background: none !important
-            }</style>
-        </div>
-        <br/></div>
 </div>
 </div>
 
@@ -550,8 +599,6 @@
 
     gtag('config', 'UA-146277055-1');
 </script>
-
-
 <!-- Yandex.Metrika counter -->
 <script async type="text/javascript">
     (function (m, e, t, r, i, k, a) {
@@ -573,9 +620,12 @@
 </script>
 <!-- /Yandex.Metrika counter -->
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script src="jquery.cyclotron.js"> </script>
 <script type="text/javascript" src="slick/slick/slick.min.js"></script>
 <script type="text/javascript">
-
+    $(document).ready(function ($) {
+        $('.cycle').cyclotron({dampingFactor:1,autorotation:0.8});
+    });
     $('.form-container').on('beforeChange', function (event, slick, currentSlide, nextSlide) {
         $('.form-container').removeClass(`slide-form-${currentSlide}`);
         $('.form-container').addClass(`slide-form-${nextSlide}`);
@@ -586,25 +636,25 @@
             infinite: true,
             speed: 300,
             adaptiveHeight: true,
-            slidesToShow: 5,
-            slidesToScroll: 2,
+            slidesToShow: 1,
+            slidesToScroll: 1,
             autoplay: true,
             autoplaySpeed: 2000,
-            responsive: [{
-                breakpoint: 1000,
-                settings: {
-                    slidesToShow: 4,
-                    infinite: true
-                }
-            }, {
-
-                breakpoint: 700,
-                settings: {
-                    slidesToShow: 1,
-                    slidesToScroll: 1,
-                    infinite: true
-                }
-            }]
+            // responsive: [{
+            //     breakpoint: 1000,
+            //     settings: {
+            //         slidesToShow: 4,
+            //         infinite: true
+            //     }
+            // }, {
+            //
+            //     breakpoint: 700,
+            //     settings: {
+            //         slidesToShow: 1,
+            //         slidesToScroll: 1,
+            //         infinite: true
+            //     }
+            // }]
         });
         $('.form-container').slick({
             dots: true,
