--- a/index.html
+++ b/index.html
@@ -530,19 +530,16 @@
 </div>
 <h1>Наши клиенты</h1>
 <div class="your-class slider content-container">
-<!--    <div class="slide"><img src="assets/team.jpg"></div>-->
-<!--    <div class="slide"><img src="assets/team.jpg"></div>-->
-<!--    <div class="slide"><img class="slide-logo" src="assets/logos/logo2.png"></div>-->
-<!--    <div class="slide"><img class="slide-logo" src="assets/logos/logo3.png"></div>-->
-<!--    <div class="slide"><img class="slide-logo" src="assets/logos/logo4.png"></div>-->
-<!--    <div class="slide"><img class="slide-logo" src="assets/logos/logo5.png"></div>-->
-<!--    <div class="slide"><img class="slide-logo" src="assets/logos/logo6.png"></div>-->
-<!--    <div class="slide"><img class="slide-logo" src="assets/logos/logo7.png"></div>-->
-<!--    <div class="slide"><img class="slide-logo" src="assets/logos/logo8.jpg"></div>-->
-<!--    <div class="slide"><img class="slide-logo" src="assets/logos/logo9.jpg"></div>-->
-<!--    <div class="slide"><img class="slide-logo" src="assets/logos/logo10.png"></div>-->
+    <div class="slide"><img class="slide-logo" src="assets/logos/logo2.png"></div>
+    <div class="slide"><img class="slide-logo" src="assets/logos/logo3.png"></div>
+    <div class="slide"><img class="slide-logo" src="assets/logos/logo4.png"></div>
+    <div class="slide"><img class="slide-logo" src="assets/logos/logo5.png"></div>
+    <div class="slide"><img class="slide-logo" src="assets/logos/logo6.png"></div>
+    <div class="slide"><img class="slide-logo" src="assets/logos/logo7.png"></div>
+    <div class="slide"><img class="slide-logo" src="assets/logos/logo8.jpg"></div>
+    <div class="slide"><img class="slide-logo" src="assets/logos/logo9.jpg"></div>
+    <div class="slide"><img class="slide-logo" src="assets/logos/logo10.png"></div>
 </div>
-<div class="cycle"> </div>
 <div class="footer">
     <div class="row">
         <div class="left-part-footer">
@@ -574,7 +571,7 @@
             </h3>
             <div style="overflow:hidden;width: 500px;position: relative;">
                 <iframe width="500" height="350"
-                        src="https://maps.google.com/maps?width=500&amp;height=350&amp;hl=en&amp;q=%D0%BC%D0%B8%D0%BD%D1%81%D0%BA%20%D1%84%D0%B0%D0%B1%D1%80%D0%B8%D1%86%D0%B8%D1%83%D1%81%D0%B0%209%D0%B0+(%D0%9E%D0%9E%D0%9E%20%22%D0%90%D0%BF%D0%9A%D0%BB%D0%B8%D0%B5%D0%BD%D1%82)&amp;ie=UTF8&amp;t=&amp;z=16&amp;iwloc=B&amp;output=embed"
+                        src="https://maps.google.com/maps?width=500&amp;height=350&amp;hl=en&amp;q=%D0%BC%D0%B8%D0%BD%D1%81%D0%BA%20%D1%84%D0%B0%D0%B1%D1%80%D0%B8%D1%86%D0%B8%D1%83%D1%81%D0%B0%209%D0%B0+(%D0%9E%D0%9E%D0%9E%20%22%D0%90%D0%BF%D0%9A%D0%BB%D0%B8%D0%B5%D0%BD%D1%82)&amp;ie=UTF8&amp;t=&amp;z=14&amp;iwloc=B&amp;output=embed"
                         frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
                 <style>#gmap_canvas img {
                     max-width: none !important;
@@ -636,25 +633,23 @@
             infinite: true,
             speed: 300,
             adaptiveHeight: true,
-            slidesToShow: 1,
-            slidesToScroll: 1,
+            slidesToShow: 5,
+            slidesToScroll: 2,
             autoplay: true,
             autoplaySpeed: 2000,
-            // responsive: [{
-            //     breakpoint: 1000,
-            //     settings: {
-            //         slidesToShow: 4,
-            //         infinite: true
-            //     }
-            // }, {
-            //
-            //     breakpoint: 700,
-            //     settings: {
-            //         slidesToShow: 1,
-            //         slidesToScroll: 1,
-            //         infinite: true
-            //     }
-            // }]
+            responsive: [{
+                breakpoint: 1000,
+                settings: {
+                    slidesToShow: 4,
+                    infinite: true
+                }
+            }, {
+                breakpoint: 700,
+                settings: {
+                    slidesToShow: 2,
+                    infinite: true
+                }
+            }]
         });
         $('.form-container').slick({
             dots: true,
